Cave api controller
Created cave's api controller.
